Zadatak - 11.06.2025, Updated -25.06.2025